[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/X.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=3]
[ext_resource path="res://Assets/PixelFonte.ttf" type="DynamicFontData" id=4]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
background_color = Color( 0.258824, 0.678431, 0.984314, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 10.0099, 0.487806, 14.9894 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 20, 1, 30 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.345098, 0.788235, 0.219608, 1 )

[sub_resource type="PhysicsMaterial" id=6]
bounce = 0.8

[sub_resource type="SphereMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 5, 5, 1 )

[sub_resource type="SphereShape" id=9]

[sub_resource type="OpenSimplexNoise" id=10]
seed = 77
period = 256.0
persistence = 1.0

[sub_resource type="NoiseTexture" id=11]
width = 48
height = 300
noise = SubResource( 10 )

[sub_resource type="OpenSimplexNoise" id=12]
seed = 80
period = 151.3
persistence = 1.0

[sub_resource type="NoiseTexture" id=13]
width = 48
height = 300
noise = SubResource( 12 )

[sub_resource type="DynamicFont" id=14]
size = 72
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
size = 300
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=16]
resource_name = "Main"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Texto:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 128, -0.25, 0, 0.25, 0, 128, -0.25, 0, 0.25, 0, 128, -0.25, 0, 0.25, 0, 128, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1.1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Texto:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -552, -0.25, 0, 0.25, 0, -32, -0.25, 0, 0.25, 0, -32, -0.25, 0, 0.25, 0, 608, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1.1, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Texto:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -90, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 90, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1.1, 2 )
}

[sub_resource type="BoxShape" id=17]
extents = Vector3( 41.6725, 10.9867, 0.216403 )

[sub_resource type="SpatialMaterial" id=18]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=19]
material = SubResource( 18 )
size = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="PhysicsMaterial" id=20]
bounce = 5000.0
absorbent = true

[sub_resource type="SpatialMaterial" id=21]
flags_transparent = true
params_cull_mode = 2
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 2, 2, 1 )
uv1_triplanar = true

[sub_resource type="QuadMesh" id=22]
material = SubResource( 21 )
size = Vector2( 6, 4.5 )

[sub_resource type="BoxShape" id=23]
extents = Vector3( 2.72326, 2.20117, 0.0936097 )

[sub_resource type="BoxShape" id=24]
extents = Vector3( 2.20243, 1.46571, 0.0987561 )

[sub_resource type="CubeMesh" id=25]
size = Vector3( 0.5, 5, 0.5 )

[sub_resource type="CubeMesh" id=26]
size = Vector3( 6, 0.5, 0.5 )

[sub_resource type="BoxShape" id=27]
extents = Vector3( 0.220262, 2.4998, 0.300995 )

[sub_resource type="BoxShape" id=28]
extents = Vector3( 3.16962, 0.246245, 0.277322 )

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.987239, 0.159244, 0, -0.159244, 0.987239, 0, 4.78441, 10.8575 )
environment = SubResource( 2 )

[node name="Campo" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Campo"]
shape = SubResource( 3 )

[node name="Campo" type="MeshInstance" parent="Campo"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Ball" type="RigidBody" parent="." groups=[
"Ball",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.089, 0 )
physics_material_override = SubResource( 6 )
continuous_cd = true
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Ball"]
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="Ball"]
shape = SubResource( 9 )

[node name="DieTimer" type="Timer" parent="Ball"]
wait_time = 5.0
one_shot = true

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 9.77279, 0 )
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_depth_range = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ForceBar" type="TextureProgress" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -320.0
margin_right = -24.0
margin_bottom = 152.0
max_value = 50.0
texture_under = SubResource( 11 )
texture_progress = SubResource( 13 )
fill_mode = 3
tint_under = Color( 0.752941, 0.752941, 0.752941, 0.611765 )
tint_progress = Color( 1, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Goals" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 24.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 88.0
custom_fonts/normal_font = SubResource( 14 )
bbcode_enabled = true
bbcode_text = "Goals: 0"
text = "Goals: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 128.0
margin_top = -552.0
margin_right = 1168.0
margin_bottom = 216.0
rect_rotation = -90.0
custom_fonts/normal_font = SubResource( 15 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=5][center] Texto [/center] [/wave]"
text = " Texto  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/Main = SubResource( 16 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.79925, -15.0116 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 17 )

[node name="Home run S2 Zero" type="Area" parent="StaticBody"]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody/Home run S2 Zero"]
shape = SubResource( 17 )

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.18356, -12.725 )
emitting = false
amount = 100
mesh = SubResource( 19 )
flag_align_y = true
flag_rotate_y = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
initial_velocity = 10.0
angle = 148.1
angle_random = 1.0
color = Color( 1, 0.0235294, 0, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Golo" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, -13 )

[node name="Rede" type="StaticBody" parent="Golo" groups=[
"Gol",
]]
physics_material_override = SubResource( 20 )

[node name="Rede" type="MeshInstance" parent="Golo/Rede"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.076, 2.93236, 0 )
material_override = SubResource( 21 )
mesh = SubResource( 22 )
material/0 = null

[node name="rede" type="CollisionShape" parent="Golo/Rede"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.726, 0 )
shape = SubResource( 23 )

[node name="Area" type="Area" parent="Golo/Rede"]

[node name="rede2" type="CollisionShape" parent="Golo/Rede/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.97838, 0 )
shape = SubResource( 24 )

[node name="Traves" type="StaticBody" parent="Golo" groups=[
"Traves",
]]

[node name="trave_L" type="MeshInstance" parent="Golo/Traves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2.93, 0 )
mesh = SubResource( 25 )
material/0 = null

[node name="trave_T" type="MeshInstance" parent="Golo/Traves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.182, 0 )
mesh = SubResource( 26 )
material/0 = null

[node name="trave_D" type="MeshInstance" parent="Golo/Traves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.682285, 0 )
mesh = SubResource( 26 )
material/0 = null

[node name="trave_R" type="MeshInstance" parent="Golo/Traves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2.93, 0 )
mesh = SubResource( 25 )
material/0 = null

[node name="left" type="CollisionShape" parent="Golo/Traves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, 0 )
shape = SubResource( 27 )

[node name="right" type="CollisionShape" parent="Golo/Traves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.02667, 3, 0 )
shape = SubResource( 27 )

[node name="top" type="CollisionShape" parent="Golo/Traves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.19779, 0 )
shape = SubResource( 28 )

[node name="down" type="CollisionShape" parent="Golo/Traves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.698075, 0 )
shape = SubResource( 28 )
[connection signal="timeout" from="Ball/DieTimer" to="Ball" method="_on_DieTimer_timeout"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="StaticBody/Home run S2 Zero" to="." method="_on_TouchDown_body_entered"]
[connection signal="body_entered" from="Golo/Rede/Area" to="." method="_on_Area_body_entered"]
